--- a/mysite/myapp/templates/register.html
+++ b/mysite/myapp/templates/register.html
@@ -15,15 +15,17 @@
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-      <form role="form">
+      <form role="form" method="post">
+        {% csrf_token %}
         <div class="form-group">
-          <label for="exampleInputEmail1"> Email address </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" />
+          <label for="exampleInputEmail1"> Username </label>
+          <input type="text" name="username" class="form-control"/>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1"> Password </label>
           <input
             type="password"
+            name="pass"
             class="form-control"
             id="exampleInputPassword1"
           />
@@ -32,6 +34,7 @@
           <label for="exampleInputPassword1"> Confirm Password </label>
           <input
             type="password"
+            name="confirm_pass"
             class="form-control"
             id="exampleInputPassword1"
           />
