--- a/mysite/myapp/templates/register.html
+++ b/mysite/myapp/templates/register.html
@@ -7,8 +7,7 @@
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-      <div class="btn-group btn-group-lg" role="group">
-      </div>
+      <div class="btn-group btn-group-lg" role="group"></div>
     </div>
     <div class="col-md-4"></div>
   </div>
@@ -19,7 +18,7 @@
         {% csrf_token %}
         <div class="form-group">
           <label for="exampleInputEmail1"> Username </label>
-          <input type="text" name="username" class="form-control"/>
+          <input type="text" name="username" class="form-control" />
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1"> Password </label>
