--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h3 class="text-center">购物界面</h3>
+      <h3 class="text-center">购物界面{{username}}</h3>
     </div>
   </div>
   <div class="row">
