💬 change shopping page

--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -40,7 +40,7 @@
               id="dropdownMenuButton"
               data-toggle="dropdown"
             >
-              类型
+              价格
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="#">A</a>
@@ -57,7 +57,7 @@
               id="dropdownMenuButton"
               data-toggle="dropdown"
             >
-              尺码
+              类型
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="#">A</a>
@@ -69,33 +69,44 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="defaultCheck1"
-            />
-            <label class="form-check-label" for="defaultCheck1">
-              <div class="row">
-                <div class="col-md-6">
-                  <img
-                    alt="Bootstrap Image Preview"
-                    src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <dl>
-                    <dt>Description lists</dt>
-                    <dd>这是示例商品</dd>
-                    <dt>Euismod</dt>
-                  </dl>
-                </div>
-                <!-- 这是多选框 -->
-                <!-- -->
-              </div>
-            </label>
-          </div>
+          <div class="row">
+		<div class="col-md-2">
+			 
+			<button type="button" class="btn btn-success">
+				添加到购物车
+			</button>
+		</div>
+		<div class="col-md-4">
+			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-6">
+			<dl>
+				<dt>
+					品牌
+				</dt>
+				<dd>
+这个电脑是 xx 品牌
+				</dd>
+				<dt>
+					价格
+				</dt>
+				<dd>
+这个电脑 xx 元				</dd>
+				<dt>
+					类型
+				</dt>
+				<dd>
+这个电脑是 xx 类型
+        </dd>
+        <dt>
+				描述
+				</dt>
+				<dd>
+这个电脑是 xx 配置，xx yy，xxyy，xxyy
+				</dd>
+			</dl>
+		</div>
+	</div>
         </div>
       </div>
       <div class="row">
