--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -27,7 +27,7 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="#">A</a>
-              <a class="dropdown-item" href="#">B/a>
+              <a class="dropdown-item" href="#">B</a>
               <a class="dropdown-item" href="#">C</a>
             </div>
           </div>
