--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -72,7 +72,7 @@
           <div class="row">
 		<div class="col-md-2">
 			 
-			<button type="button" class="btn btn-success">
+			<button type="button" class="btn btn-success" name="add" value="1" method="post">
 				添加到购物车
 			</button>
 		</div>
