--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -70,9 +70,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="row">
-		<div class="col-md-2">
-			 
-			<button type="button" class="btn btn-success" name="add" value="1" method="post">
+		<div class="col-md-2">			 
+			<button value="1" onclick="">
 				添加到购物车
 			</button>
 		</div>
@@ -148,7 +147,7 @@
               src="https://www.layoutit.com/img/people-q-c-600-200-1.jpg"
             />
             <div class="card-block">
-              <h5 class="card-title">推荐商品1</h5>
+              <h5 class="card-title">推荐商品1 </h5>
               <p class="card-text">
                 这个是商品1
               </p>
@@ -200,6 +199,14 @@
       </div>
     </div>
   </div>
+  <form method="POST">
+    {% csrf_token %}
+    <input type="number" name="add_number">
+    <button type="submit">
+      确定
+    </button>
+  </form>
+  <p>推荐的类似商品是 {{index}} 号</p>
 </div>
 <!-- CSS -->
 <link
