✨ begin my project

--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -1,7 +1,9 @@
 <form action="" method="POST">
+  {% csrf_token %}
   <input type="checkbox" value="1" name="check_box_list" />1
   <input type="checkbox" value="2" name="check_box_list" />2
   <input type="checkbox" value="3" name="check_box_list" />3
   <input type="checkbox" value="4" name="check_box_list" />4
   <input type="submit" value="提交" />
 </form>
+{{ }}
