--- a/mysite/myapp/templates/shopping.html
+++ b/mysite/myapp/templates/shopping.html
@@ -1,9 +1,76 @@
-<form action="" method="POST">
-  {% csrf_token %}
-  <input type="checkbox" value="1" name="check_box_list" />1
-  <input type="checkbox" value="2" name="check_box_list" />2
-  <input type="checkbox" value="3" name="check_box_list" />3
-  <input type="checkbox" value="4" name="check_box_list" />4
-  <input type="submit" value="提交" />
-</form>
-{{ }}
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="text-center">购物页面</h3>
+    </div>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="col-md-12">
+    <h3 class="text-center">推荐商品</h3>
+    选择了 {% for i in chosen %}  {{ i }}, {% endfor %}号商品
+  </div>
+      <div class="row">
+        {% for id,des in 推荐列表 %}
+        <div class="col-md-6">
+          <img
+            alt="Bootstrap Image Preview"
+            src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+          />
+        </div>
+        <div class="col-md-6">
+          <dl>
+            <dt>{{ id }} 号商品</dt>
+            <dd>{{ des }}</dd>
+          </dl>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h3>商品列表</h3>
+      <div class="row">
+        {% for id,miao_shu in 商品列表 %}
+        <form action="" method="POST">
+          {% csrf_token %}
+        <div class="col-md-4">
+          <input type="checkbox" value={{id}} name="check_box_list" />
+          <img
+            alt="Bootstrap Image Preview"
+            src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+          />
+        </div>
+        <div class="col-md-8">
+          <dl>
+            <dt>{{ id }} 号商品</dt>
+            <dd>{{ miao_shu }}</dd>
+            </dd>
+          </dl>
+        </div>
+        {% endfor %}
+      </div>
+    <input type="submit" value="提交" />
+        </form>
+    </div>
+  </div>
+</div>
+
+<!-- CSS -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+  crossorigin="anonymous"
+/>
+<!-- jQuery and JS bundle w/ Popper.js -->
+<script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+  crossorigin="anonymous"
+></script>
